# misc

./: .gitignore  README.md
ai/: feature_matching.py  ffmpeg.sh  make_multidata.py  opcounter.py  profileGPU.sh
ai/IPM/: ipm.py  ipm.py.old  main.py
ai/IPM/config/: config_csmp_3840x2160.yaml  config_csmp_960x540.yaml  config_ptz.yaml  config_vision.yaml  config_vision_1920x1080.yaml
ai/cuda/: CMakeLists.txt
ai/dataset_devkit/: .gitignore  README.md  setup.cfg  setup.py
ai/dataset_devkit/dataset/: coco_dataset.py
ai/dataset_devkit/doc/: dataset_devkit.drawio
ai/dataset_devkit/test/: __init__.py  test_dataset.py
ai/fix_label/: CMakeLists.txt  fix_label.cc  main.cc
ai/mxdataset_devkit/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
ai/mxdataset_devkit/config/: mxdataset.yaml
ai/mxdataset_devkit/mxdataset/: __init__.py  fileset.py  imageset.py  lakestorage.py  mxdataset.py  mxdownloader.py  mxuploader.py  resultset.py  s3storage.py  util.py  videoset.py
ai/mxdataset_devkit/mxdataset/migration/: migration.py
ai/mxdataset_devkit/tests/: test_lakestorage.py  test_migration.py  test_resultset.py
ai/mxdataset_devkit/tools/: lakefs_demo.py  migration.py  mxdatasetd.py  mxlakefs.py
cuda/: CMakeLists.txt  cuda.cu  main.cu
dl/: make_multidata.py  miniimagenet_process.py  process_mini-imagenet.py  profileGPU.sh  split_data.py
dl/IPM/: config_3840x2160.yaml  config_960x540.yaml  ipm.py  main.py
dl/cuda/: CMakeLists.txt
dl/dataset_devkit/: LICENSE.txt  tox.ini
dl/dataset_devkit/dataset/: __init__.py  dataset_factory.py  idataset.py  voc_dataset.py
dl/dataset_devkit/example/: example.py
dl/fix_labels/: CMakeLists.txt  fix_labels.cc  fix_labels.py
dl/fuse_labels/: CMakeLists.txt  fix_labels.cc  fix_labels.py  fuse_labels.py
dl/onnx/: export_onnx.py  opt_onnx.py
lcd/: .cproject  .lcd.g_x  .lpspi_dma_s32k144.g_c  .lpspi_dma_s32k144.g_x  .spi_dma.g_c  .spi_dma.g_x  description.txt
lcd/Debug_Configurations/: lcd_debug_flash_jlink.launch  lcd_debug_flash_pemicro.launch
lcd/Debug_FLASH/: lcd.args  lcd.elf  lcd.map  lpspi_dma_s32k144.args  lpspi_dma_s32k144.elf  makefile  sources.mk
lcd/Debug_FLASH/Generated_Code/: Send.args  dmaController1.d  spi_0.d  spi_1.args  subdir.mk
lcd/Debug_FLASH/Sources/: main.d
lcd/Debug_FLASH/Sources/board/: subdir.mk
lcd/Debug_FLASH/Sources/spi/: spi.d
lcd/Documentation/: lpspi_dma_s32k144.txt  spi_dma.txt
lcd/Generated_Code/: Cpu.h  clockMan1.c  clockMan1.h  dmaController1.c  dmaController1.h  pin_mux.c  pin_mux.h
lcd/Sources/: image_data.h
lcd/Sources/board/: board.c  board.h
lcd/Sources/spi/: spi.c  spi.h
ldd/device/: device.c
ldd/device/example/: CMakeLists.txt
ldd/force_rmmod/: .gitignore  Makefile  README.txt  force_rmmod.c
ldd/hello/: Makefile  hello.c
ldd/scull/: .gitignore  Makefile  scull.c  scull.h  scull_load.sh  scull_unload.sh
ldd/scull/example/: .gitignore  Makefile  example.c  main.c
lde/: CMakeLists.txt  device.c  device.h  main.cc
lde/example/: CMakeLists.txt  main.cc
lde/inc/: device.h
lde/src/: device.c
mcu/lcd/: .lcd.g_c  .project  ProcessorExpert.pe
mcu/lcd/Debug_FLASH/: lpspi_dma_s32k144.map  spi_dma.args  spi_dma.map
mcu/lcd/Debug_FLASH/Generated_Code/: Cpu.d  clockMan1.d  pin_mux.d
mcu/lcd/Debug_FLASH/Sources/: subdir.mk
mcu/lcd/Documentation/: lcd.txt  lcd_Settings.xml  lpspi_dma_s32k144_Settings.previous.xml  spi_dma_Settings.xml
mcu/lcd/Generated_Code/: Cpu.c  spi_0.c  spi_0.h
mcu/lcd/Sources/: main.c
mcu/lcd/Sources/board/: board_config.h
mcu/spi_dma_s32k144/: .project  .spi_dma.g_x
mcu/spi_dma_s32k144/Debug_Configurations/: spi_dma_debug_flash_jlink.launch  spi_dma_debug_flash_pemicro.launch  spi_dma_debug_ram_jlink.launch  spi_dma_debug_ram_pemicro.launch
mcu/spi_dma_s32k144/Debug_FLASH/: makefile  spi_dma.args  spi_dma.map
mcu/spi_dma_s32k144/Debug_FLASH/Generated_Code/: dmaController1.d
mcu/spi_dma_s32k144/Documentation/: lpspi_dma_s32k144.txt  spi_dma.txt
mcu/spi_dma_s32k144/Doxygen/: lpspi_dma.dox
mcu/spi_dma_s32k144/Generated_Code/: clockMan1.h  pin_mux.c
mcu/spi_dma_stm32f205/Listings/: spi_dma.map  startup_stm32f205xx.lst
pybind11/: CMakeLists.txt  main.cc  main.py
python/: .gitignore  daemon.py  thread.py
python/module/: main.py  module.py
python/module/runoob/: __init__.py  runoob1.py  runoob2.py
python/mysql/: main.py
python/oo/: main.py  oo.py
python/socket/: client.py  server.py
python/sql/: sql.py
python/thread/: main.py  thread.py
ros/src/beginner_tutorials/: CMakeLists.txt  package.xml
ros/src/beginner_tutorials/launch/: server_client.launch  talker_listener.launch
ros/src/hello_world/: CMakeLists.txt  package.xml
ros/src/hello_world/launch/: hello_world_node.launch
ros/src/hello_world/src/: main.cc
socket/: client.cc  client.h  log.h
spi_dma_s32k144/: .cproject  .spi_dma.g_c  ProcessorExpert.pe
spi_dma_s32k144/Debug_FLASH/: sources.mk  spi_dma.elf
spi_dma_s32k144/Debug_FLASH/Generated_Code/: Cpu.d  clockMan1.d  spi0.d  subdir.mk
spi_dma_s32k144/Debug_FLASH/Sources/: main.d  subdir.mk
spi_dma_s32k144/Documentation/: lpspi_dma.txt  lpspi_dma_Settings.xml  spi_dma_Settings.previous.xml  spi_dma_Settings.xml
spi_dma_s32k144/Generated_Code/: Cpu.c  Cpu.h  clockMan1.c  dmaController1.c  dmaController1.h  pin_mux.h  spi0.c  spi0.h
spi_dma_s32k144/Sources/: main.c
spi_dma_stm32f205/: JLinkLog.txt  spi_dma.uvguix.Administrator  spi_dma.uvoptx  spi_dma.uvprojx
spi_dma_stm32f205/RTE/Device/STM32F205RETx/: RTE_Device.h  (+2 more)
spi_dma_stm32f205/RTE/_Target/: RTE_Components.h
spi_dma_stm32f205/inc/: main.h
spi_dma_stm32f205/src/: main.c  stm32f2xx_hal_msp.c
threadpool/: CMakeLists.txt  threadpool.cc
util/: block_queue.h  converter.h  log.h  timer.cc  timer.h  util.h
util/abstract_factory/: product.py  product_factory.py
util/converter/: converter.c  converter.h
util/socket/: client.cc  client.h  socketlib.cc  socketlib.h
util/timer/: timer.cc  timer.h
utils/: converter.c  timer.cc
yaml/: CMakeLists.txt  config.yaml  yaml.cc
(+31 files in other folders)
