[metadata]
name = dataset_devkit
version = 0.1.0
author = zwx
author_email = zhangwenxing@mxnavi.com
description = Dataset devkit
long_description = file: README.md, LICENSE
keywords = one, two
license = MXNAVI
; url = https://github.com/user/repo
; project_urls =
;     Changelog = https://github.com/**/changelog.rst
;     GitHub = https://github.com/**
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MXNAVI License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    requests
    pycocotools>=2.0.6
dependency_links = 
    https://pypi.python.org/simple
    https://pypi.tuna.tsinghua.edu.cn/simple/

; [options.package_data]
; * = *.txt, *.rst
; hello = *.msg

; [options.entry_points]
; console_scripts =
;     executable-name = my_package.module:function

; [options.extras_require]
; pdf = ReportLab>=1.2; RXP
; rest = docutils>=0.3; pack ==1.1, ==1.3

; [options.packages.find]
; exclude =
;     examples*
;     tools*
;     docs*
;     my_package.tests*