[metadata]
name = mxdataset_devkit
version = attr: mxdataset.__version__
author = zwx
author_email = zwxdlut@163.com
description = A mxdataset devkit.
long_description = file: README.md, LICENSE
keywords = mxdataset, devkit, s3, lakefs
license = GPLv3
; url = https://github.com/user/repo
; project_urls =
;     Changelog = https://github.com/**/changelog.rst
;     GitHub = https://github.com/**
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: GPLv3 License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = 
    find:
    ; find_namespace:
    ; mypkg
    ; mypkg.subpkg1
    ; mypkg.subpkg2
; package_dir =
;     = src
;     # directory containing all the packages (e.g.  src/mypkg, src/mypkg/subpkg1, ...)
;     mypkg = lib
;     # mypkg.module corresponds to lib/module.py
;     mypkg.subpkg1 = lib1
;     # mypkg.subpkg1.module1 corresponds to lib1/module1.py
;     mypkg.subpkg2 = lib2
;     # mypkg.subpkg2.module2 corresponds to lib2/module2.py
; namespace_packages = timmins
include_package_data = True
python_requires = >=3.8
install_requires =
    pyyaml
    requests
    boto3
    lakefs_client @ git+http://192.168.70.202:30453/ai-model/lakefs_client.git@master
    pycocotools>=2.0.6
dependency_links = 
    https://pypi.python.org/simple
    https://pypi.tuna.tsinghua.edu.cn/simple/

; [options.packages.find]
; where = src
; include = pkg*
; exclude =
;     examples*
;     tools*
;     docs*
;     my_package.tests*

; [options.package_data]
; * = *.txt, *.rst
; hello = *.msg

[options.data_files]
* = config/*.yaml

[options.entry_points]
console_scripts =
    ; executable-name = my_package.module:function
    migrate = mxdataset.migration.migration:migrate

; [options.extras_require]
; pdf = ReportLab>=1.2; RXP
; rest = docutils>=0.3; pack ==1.1, ==1.3
